dev/test_programs/INVALID/group13/invalid_for.go
package main

func main() {
	for a := 5; a < 10; a > 20; a++ {
		println("test")
	}
}